src/test/deca/syntax/valid/sansObjet/while.deca
{
    while (x < 0){
        print("blabla");
    }
}
