src/test/deca/syntax/invalid/sansObjet/IntegerOverFlowNegativ.deca
{
    //println("Start test IntegerOverFlow [-oo;0]");
    int x = -2147483648;
    int x = -2147483647;
}